--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "author": "Nandhini",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "protractor": "^7.0.0"
+  }
 }
